# deep-robot-grasping

./: .gitignore  CMakeLists.txt  README.md  README_LOCAL.md  package.xml
description/: panda_gazebo.xacro
description/cube/: model.config  model.sdf
description/realsense_d435/: model.config
description/realsense_d435/materials/scripts/: model.material
description/realsense_d435/meshes/: realsense.dae
description/tabletop/: model.config  model.sdf
launch/: evaluation_real.launch  evaluation_sim.launch  training.launch
models/: actor1.2.7.h5  actor_target1.2.7.h5  critic1.2.7.h5  critic_target1.2.7.h5
models/autosave_files/: actor1.0.0.h5  actor1.0.1.h5  actor1.0.2.h5  actor1.0.3.h5  actor1.0.4.h5  actor1.0.5.h5  actor1.0.6.h5  actor1.1.0.h5  actor1.1.1.h5  actor1.1.3.h5  actor1.2.0.h5  actor1.2.1.h5  actor1.2.2.h5  actor1.2.3.h5  actor1.2.4.h5  actor1.2.5.h5  actor1.2.6.h5  actor_target1.0.0.h5  actor_target1.0.1.h5  actor_target1.0.2.h5  actor_target1.0.3.h5  actor_target1.0.4.h5  actor_target1.0.5.h5  actor_target1.0.6.h5  actor_target1.1.0.h5  actor_target1.1.1.h5  actor_target1.1.3.h5  actor_target1.2.0.h5  actor_target1.2.1.h5  actor_target1.2.2.h5  actor_target1.2.3.h5  actor_target1.2.4.h5  actor_target1.2.5.h5  actor_target1.2.6.h5  critic1.0.0.h5  critic1.0.1.h5  critic1.0.2.h5  critic1.0.3.h5  critic1.0.4.h5  critic1.0.5.h5  (+27 more)
msg/: Action.msg  Reward.msg  Sample.msg  State.msg
results/: data_evaluation_sim1.2.4.txt  data_evaluation_sim_simple.txt  data_training1.0.txt  data_training1.1.txt  data_training1.2.txt
scripts/: agent_main.py  agent_model.py
src/: agent_buffer.cpp  environment_real.cpp  environment_sim.cpp
srv/: EnvironmentStep.srv  GetAction.srv  GetBatch.srv  ResetEnvironment.srv  Train.srv
