<?xml version="1.0"?>
<package format="2">
  <name>panda_deep_grasping</name>
  <version>0.0.1</version>
  <description>Use reinforcement learning for grasping on a franka emika panda robot.</description>

  <maintainer email="vincent.mueller@student.kit.edu">Vincent Müller</maintainer>
  <license>MIT</license>
  <url type="repository">https://git.scc.kit.edu/uhksn/panda-deep-grasping</url>
  <author email="vincent.mueller@student.kit.edu">Vincent Müller</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>

</package>
